--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ notifications:
     on_success: change
 
 deploy:
+  local-dir: docs
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
