build: Updated dependencies

--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "4.1.2",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
     "font-awesome": "4.7.0",
-    "font-awesome-webpack": "0.0.5-beta.2"
+    "font-awesome-webpack": "0.0.5-beta.2",
+    "jquery": "^3.3.1",
+    "less": "^2.3.1",
+    "popper.js": "^1.14.4",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.0",
