--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "~4.1.2",
     "core-js": "^2.4.1",
     "font-awesome": "4.7.0",
